button whitespace fix

--- a/packages/css/src/components/button/button.scss
+++ b/packages/css/src/components/button/button.scss
@@ -1,7 +1,3 @@
-.btn {
-  @include button_base();
-}
-
 #{$dso-buttons} {
   @include button_base();
 }
