--- a/packages/sources/src/components/alert/alert.scss
+++ b/packages/sources/src/components/alert/alert.scss
@@ -39,7 +39,6 @@ $alert-danger-border: $state-danger-border;
       margin-top: $u1;
     }
 
-    .btn,
     #{dso-buttons} {
       background-color: rgba(25, 25, 25, 0.05);
       border-radius: $dso-button-border-radius;
