--- a/packages/sources/src/styling/variables.scss
+++ b/packages/sources/src/styling/variables.scss
@@ -11,4 +11,13 @@
 // Alphabetical ordered components
 @import "variables/icon";
 
-$dso-buttons: ".dso-primary, .dso-secondary, .dso-tertiary";
+$dso-button-primary: ".btn-primary, .dso-primary";
+$dso-button-secondary: ".btn-default, .dso-secondary";
+$dso-button-primary: ".btn-primary, .dso-primary";
+
+$dso-buttons: ".btn, .dso-primary, .dso-secondary, .dso-tertiary";
+
+$not-dso-buttons: '';
+@each $button-class in $dso-buttons {
+  $not-dso-buttons: $not-dso-buttons + ':not(' + $button-class + ')';
+}
